Remove highlighted elements and improve UI/UX

--- a/templates/candidate-resources.html
+++ b/templates/candidate-resources.html
@@ -95,7 +95,7 @@
             bottom: -5px;
             left: 0;
             right: 0;
-            height: a3px;
+            height: 3px;
             background-color: var(--purple);
             transform: scaleX(0.7);
             transition: transform var(--transition-normal);
